初步添加新的主界面

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,13 @@
             android:windowSoftInputMode="adjustPan"/>
 
         <activity
+            android:name=".New_MainActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="adjustPan"/>
+
+        <activity
             android:name="KeyboardActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="sensor"
