--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <application
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
+        android:theme="@style/AppTheme"
+        android:allowBackup="true"
         >
 
         <activity
@@ -34,14 +36,14 @@
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan"/>
 
         <activity
             android:name=".New_MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan"/>
 
         <activity
@@ -102,7 +104,7 @@
         android:name="android.hardware.wifi"
         android:required="true"/>
 
-    <uses-sdk android:minSdkVersion="11"/>
+    <uses-sdk android:minSdkVersion="17"/>
 
     <supports-screens android:smallScreens="false"/>
 </manifest>
