--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
      available
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.android.apps.tvremote"
+    package="com.winside.tvremote"
     android:installLocation="auto"
     android:versionCode="23"
     android:versionName="1.0.2" >
