--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile files('libs/android-support-v4.jar')
+    compile files('libs/zxing.jar')
 }
 
 android {
