初步添加新的手柄布局界面

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -107,6 +107,11 @@
             android:name=".HandleActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".GameHandleActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
+
         <service
             android:name=".CoreService"
             android:enabled="true"
