--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <activity
             android:name=".StartupActivity"
             android:noHistory="true"
-            android:theme="@style/AppTheme">
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -113,7 +113,7 @@
             android:theme="@style/AppTheme"/>
 
         <service
-            android:name=".CoreService"
+            android:name=".component.CoreService"
             android:enabled="true"
             android:exported="true"
             android:label="@string/core_service_label"
