取消监听屏幕锁屏事件，将传感器初始化放在onResume()方法，防止锁屏后再打开程序崩溃问题

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -113,7 +113,7 @@
             android:theme="@style/AppTheme"/>
 
         <service
-            android:name=".component.CoreService"
+            android:name=".CoreService"
             android:enabled="true"
             android:exported="true"
             android:label="@string/core_service_label"
