--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -112,6 +112,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
 
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
+
         <service
             android:name=".CoreService"
             android:enabled="true"
